// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/"
      text="トリビアマップ"
    />
    <ForwardRef(Typography)
      align="center"
    >
      ようこそ 
      Axel
      さん
    </ForwardRef(Typography)>
    <ForwardRef(Stack)
      direction="row"
    >
      <ForwardRef(Avatar)
        src="https://..."
        sx={
          Object {
            "height": 80,
            "mx": "auto",
            "width": 80,
          }
        }
      />
    </ForwardRef(Stack)>
    <ForwardRef(Typography)
      align="center"
    >
      <Link
        to="/users/1"
      >
        プロフィール
      </Link>
    </ForwardRef(Typography)>
    <LinkList
      list={
        Array [
          Object {
            "icon": <Memo />,
            "link": "/admin/articles",
            "text": "マイ投稿一覧",
          },
          Object {
            "icon": <Memo />,
            "link": "/admin/likes",
            "text": "お気に入り一覧",
          },
          Object {
            "icon": <Memo />,
            "link": "/admin/account",
            "text": "アカウント設定",
          },
          Object {
            "icon": <MyIcon
              variant="special-list"
            />,
            "link": "/admin/special-maps",
            "text": "マイオリジナルマップ一覧",
          },
        ]
      }
    />
  </ForwardRef(Stack)>
</AdminWrapper>
`;

exports[`Shallow Snapshot Tests no icon 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/"
      text="トリビアマップ"
    />
    <ForwardRef(Typography)
      align="center"
    >
      ようこそ 
      Axel
      さん
    </ForwardRef(Typography)>
    <ForwardRef(Stack)
      direction="row"
    >
      <ForwardRef(Avatar)
        src="no-icon.jpg"
        sx={
          Object {
            "height": 80,
            "mx": "auto",
            "width": 80,
          }
        }
      />
    </ForwardRef(Stack)>
    <ForwardRef(Typography)
      align="center"
    >
      <Link
        to="/users/1"
      >
        プロフィール
      </Link>
    </ForwardRef(Typography)>
    <LinkList
      list={
        Array [
          Object {
            "icon": <Memo />,
            "link": "/admin/articles",
            "text": "マイ投稿一覧",
          },
          Object {
            "icon": <Memo />,
            "link": "/admin/likes",
            "text": "お気に入り一覧",
          },
          Object {
            "icon": <Memo />,
            "link": "/admin/account",
            "text": "アカウント設定",
          },
          Object {
            "icon": <MyIcon
              variant="special-list"
            />,
            "link": "/admin/special-maps",
            "text": "マイオリジナルマップ一覧",
          },
        ]
      }
    />
  </ForwardRef(Stack)>
</AdminWrapper>
`;
